--- a/prac2/dom.css
+++ b/prac2/dom.css
@@ -1,21 +1,30 @@
 .calculator{
     /* content-style */
     padding: 8px;
+    width: 400px;
+    
+    /* content-layout */
+    display:flex;
+    flex-direction: column;
+}
 
+.btns{
     /* content-layout */
     display: grid;
     grid-template: 
-    "bod bod bod bod" 70px
     "num num num opr" 100px
     "num num num opr" 100px
     "num num num opr" 100px
     "num num num opr" 100px
     /100px 100px 100px 100px;
-
 }
 
 .board{
-    grid-area: bod;
+    /* content-style */
     border-inline: 5px solid gray;
+    height: 50px;
+
+    /* content-layout */
+    grid-area: bod;
     text-align: right;
 }
